<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/dimen_32dp"
        android:paddingBottom="@dimen/dimen_16dp">

        <ImageView
            android:id="@+id/bootstrapIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_bootstrap"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/usernameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/bootstrapIcon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginTop="@dimen/dimen_16dp"
            app:layout_constraintTop_toBottomOf="@id/usernameInput"
            app:layout_constraintStart_toStartOf="@id/usernameInput" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginTop="@dimen/dimen_16dp"
            app:layout_constraintTop_toBottomOf="@id/passwordInput"
            app:layout_constraintStart_toStartOf="@id/passwordInput" />

        <TextView
            android:id="@+id/wolox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wolox_company_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
