<resources>
    <string name="app_name">Wolox Android Bootstrap</string>
    <string name="wolox_company_name">Wolox, part of Accenture</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="server_error">Server error</string>
    <string name="empty_username_error">Username must not be empty!</string>
    <string name="empty_password_error">Password must not be empty!</string>
    <string name="ok">OK</string>
    <string name="posts_error">Error retrieving posts</string>
    <string name="no_posts_to_show">Currently we have no posts to show</string>
</resources>